# CETNext

./: .gitignore  LICENSE  README.md  README.old.md  README_EN.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
CETNext/: __init__.py  __main__.py  api.py  cli.py  edu.py  search_user.py  user.py  work.py
CodemaoEDUTools/: __init__.py  __main__.py  api.py  cli.py  edu.py  work.py
doc/: cli.md  code.md  import.md
