[project]
name = "cetnext"
version = "1.2.0"
description = '为编程猫社区的"老师"们提供CodemaoEDUTools的打赢复活赛版，且用且珍惜'
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "click==8.3.2",
    "coloredlogs==15.0.1",
    "fake-useragent>0.1.11",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "playwright==1.59.0",
    "requests>=2.25.1",
]

[project.scripts]
cetnext = "CETNext.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["CETNext"]
include-package-data = true
